Add GET endpoint (Sensor)
