# dev/iot-rest-api/api/dao/database.js
@@ -7,10 +7,17 @@
 
 const dbConfig = require('../../config/database');
 const MessageDAO = require('./message/MessageDAO');
+const SensorDAO = require('./sensor/SensorDAO');
 const { MongoClient } = require('mongodb');
 
 const database = {
   messageDAO: new MessageDAO({
+    dbAddress: dbConfig.address,
+    dbPort: dbConfig.port,
+    dbName: dbConfig.name,
+    mongoClient: MongoClient,
+  }),
+  sensorDAO: new SensorDAO({
     dbAddress: dbConfig.address,
     dbPort: dbConfig.port,
     dbName: dbConfig.name,
